go/p2panda_ffi/p2panda_ffi.h

uint16_t uniffi_p2panda_ffi_checksum_method_nodebuilder_ack_policy(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_method_nodebuilder_bind_ip_v4(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_method_nodebuilder_bind_ip_v6(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_method_nodebuilder_bind_port_v4(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_method_nodebuilder_bind_port_v6(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_method_nodebuilder_bootstrap(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_method_nodebuilder_database_url(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_method_nodebuilder_mdns_mode(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_method_nodebuilder_network_id(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_method_nodebuilder_private_key(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_method_nodebuilder_relay_url(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_method_nodebuilder_spawn(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_method_privatekey_public_key(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_method_privatekey_sign(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_method_privatekey_to_bytes(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_method_privatekey_to_hex(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_method_publickey_to_bytes(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_method_publickey_to_hex(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_method_publickey_verify(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_method_relayurl_to_str(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_method_signature_to_bytes(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_method_signature_to_hex(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_method_topicid_to_bytes(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_method_topicid_to_hex(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_method_topicstreamcallback_on_event(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_method_topicstreamcallback_on_error(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_method_topicstreamcallback_on_operation(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_method_processedoperation_ack(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_method_processedoperation_author(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_method_processedoperation_id(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_method_processedoperation_message(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_method_processedoperation_processed(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_method_processedoperation_timestamp(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_method_processedoperation_topic(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_method_topicstream_ack(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_method_topicstream_prune(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_method_topicstream_publish(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_method_topicstream_topic(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_constructor_nodebuilder_new(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_constructor_privatekey_from_bytes(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_constructor_privatekey_from_hex(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_constructor_privatekey_generate(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_constructor_publickey_from_bytes(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_constructor_publickey_from_hex(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_constructor_relayurl_from_str(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_constructor_signature_from_bytes(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_constructor_signature_from_hex(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_constructor_topicid_from_bytes(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_constructor_topicid_from_hash(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_constructor_topicid_from_hex(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_constructor_topicid_random(void
    
);