python/p2panda_ffi/p2panda_ffi.py

_UniffiLib.uniffi_p2panda_ffi_checksum_constructor_nodebuilder_new.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_constructor_nodebuilder_new.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_method_nodebuilder_ack_policy.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_method_nodebuilder_ack_policy.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_method_nodebuilder_bind_ip_v4.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_method_nodebuilder_bind_ip_v4.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_method_nodebuilder_bind_ip_v6.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_method_nodebuilder_bind_ip_v6.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_method_nodebuilder_bind_port_v4.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_method_nodebuilder_bind_port_v4.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_method_nodebuilder_bind_port_v6.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_method_nodebuilder_bind_port_v6.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_method_nodebuilder_bootstrap.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_method_nodebuilder_bootstrap.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_method_nodebuilder_database_url.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_method_nodebuilder_database_url.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_method_nodebuilder_mdns_mode.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_method_nodebuilder_mdns_mode.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_method_nodebuilder_network_id.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_method_nodebuilder_network_id.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_method_nodebuilder_private_key.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_method_nodebuilder_private_key.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_method_nodebuilder_relay_url.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_method_nodebuilder_relay_url.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_method_nodebuilder_spawn.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_method_nodebuilder_spawn.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_constructor_privatekey_from_bytes.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_constructor_privatekey_from_bytes.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_constructor_privatekey_from_hex.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_constructor_privatekey_from_hex.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_constructor_privatekey_generate.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_constructor_privatekey_generate.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_method_privatekey_public_key.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_method_privatekey_public_key.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_method_privatekey_sign.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_method_privatekey_sign.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_method_privatekey_to_bytes.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_method_privatekey_to_bytes.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_method_privatekey_to_hex.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_method_privatekey_to_hex.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_method_processedoperation_ack.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_method_processedoperation_ack.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_method_processedoperation_author.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_method_processedoperation_author.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_method_processedoperation_id.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_method_processedoperation_id.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_method_processedoperation_message.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_method_processedoperation_message.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_method_processedoperation_processed.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_method_processedoperation_processed.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_method_processedoperation_timestamp.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_method_processedoperation_timestamp.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_method_processedoperation_topic.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_method_processedoperation_topic.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_constructor_publickey_from_bytes.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_constructor_publickey_from_bytes.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_constructor_publickey_from_hex.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_constructor_publickey_from_hex.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_method_publickey_to_bytes.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_method_publickey_to_bytes.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_method_publickey_to_hex.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_method_publickey_to_hex.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_method_publickey_verify.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_method_publickey_verify.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_constructor_relayurl_from_str.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_constructor_relayurl_from_str.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_method_relayurl_to_str.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_method_relayurl_to_str.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_constructor_signature_from_bytes.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_constructor_signature_from_bytes.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_constructor_signature_from_hex.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_constructor_signature_from_hex.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_method_signature_to_bytes.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_method_signature_to_bytes.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_method_signature_to_hex.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_method_signature_to_hex.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_constructor_topicid_from_bytes.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_constructor_topicid_from_bytes.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_constructor_topicid_from_hash.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_constructor_topicid_from_hash.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_constructor_topicid_from_hex.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_constructor_topicid_from_hex.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_constructor_topicid_random.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_constructor_topicid_random.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_method_topicid_to_bytes.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_method_topicid_to_bytes.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_method_topicid_to_hex.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_method_topicid_to_hex.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_method_topicstream_ack.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_method_topicstream_ack.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_method_topicstream_prune.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_method_topicstream_prune.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_method_topicstream_publish.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_method_topicstream_publish.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_method_topicstream_topic.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_method_topicstream_topic.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_method_topicstreamcallback_on_event.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_method_topicstreamcallback_on_event.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_method_topicstreamcallback_on_error.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_method_topicstreamcallback_on_error.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_method_topicstreamcallback_on_operation.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_method_topicstreamcallback_on_operation.restype = ctypes.c_uint16

_uniffi_check_contract_api_version(_UniffiLib)
# _uniffi_check_api_checksums(_UniffiLib)

# RustFuturePoll values
_UNIFFI_RUST_FUTURE_POLL_READY = 0
_UNIFFI_RUST_FUTURE_POLL_WAKE = 1

# Stores futures for _uniffi_continuation_callback
_UniffiContinuationHandleMap = _UniffiHandleMap()

_UNIFFI_GLOBAL_EVENT_LOOP = None

"""
Set the event loop to use for async functions

This is needed if some async functions run outside of the eventloop, for example:
    - A non-eventloop thread is spawned, maybe from `EventLoop.run_in_executor` or maybe from the
      Rust code spawning its own thread.
    - The Rust code calls an async callback method from a sync callback function, using something
      like `pollster` to block on the async call.

In this case, we need an event loop to run the Python async function, but there's no eventloop set
for the thread.  Use `uniffi_set_event_loop` to force an eventloop to be used in this case.
"""
def uniffi_set_event_loop(eventloop: asyncio.BaseEventLoop):
    global _UNIFFI_GLOBAL_EVENT_LOOP
    _UNIFFI_GLOBAL_EVENT_LOOP = eventloop

def _uniffi_get_event_loop():
    if _UNIFFI_GLOBAL_EVENT_LOOP is not None:
        return _UNIFFI_GLOBAL_EVENT_LOOP
    else:
        return asyncio.get_running_loop()

# Continuation callback for async functions
# lift the return value or error and resolve the future, causing the async function to resume.
@_UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK
def _uniffi_continuation_callback(future_ptr, poll_code):
    (eventloop, future) = _UniffiContinuationHandleMap.remove(future_ptr)
    eventloop.call_soon_threadsafe(_uniffi_set_future_result, future, poll_code)

def _uniffi_set_future_result(future, poll_code):
    if not future.cancelled():
        future.set_result(poll_code)

async def _uniffi_rust_call_async(rust_future, ffi_poll, ffi_complete, ffi_free, lift_func, error_ffi_converter):
    try:
        eventloop = _uniffi_get_event_loop()

        # Loop and poll until we see a _UNIFFI_RUST_FUTURE_POLL_READY value
        while True:
            future = eventloop.create_future()
            ffi_poll(
                rust_future,
                _uniffi_continuation_callback,
                _UniffiContinuationHandleMap.insert((eventloop, future)),
            )
            poll_code = await future
            if poll_code == _UNIFFI_RUST_FUTURE_POLL_READY:
                break

        return lift_func(
            _uniffi_rust_call_with_error(error_ffi_converter, ffi_complete, rust_future)
        )
    finally:
        ffi_free(rust_future)

# Public interface members begin here.







class AckPolicy(enum.Enum):
    
    EXPLICIT = 0
    
    AUTOMATIC = 1
    

